# SpaceRocks

./: .gitignore  README.md  WISHLIST.md  asteroid.py  game_events.jsonl  main.py  player.py  pyproject.toml  score_display.py  shot.py
.beads/: issues.jsonl
.specify/memory/: constitution.md
.specify/specs/: scoring-system.md
classes/: asteroid.py  asteroidfield.py  player.py  score_manager.py  shot.py
tests/unit/: test_score_manager.py
util/: constants.py  logger.py
